Update example config and bump to 1.0.2
